[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/weapons/Weapon.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/weapons/bazooka.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/weapons/crosshair.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/loading_weapon.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/gfx/weapons/fire_progress.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/fire.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "loading"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Crosshair/TextureProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LoadingPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="Crosshair" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Crosshair"]
position = Vector2( 7.625, 0.750847 )
z_index = 1
texture = ExtResource( 2 )

[node name="CrosshairSprite" type="Sprite" parent="Crosshair"]
modulate = Color( 1, 0, 0.266667, 1 )
position = Vector2( 72.2873, 0 )
z_index = 2
texture = ExtResource( 3 )

[node name="TextureProgress" type="TextureProgress" parent="Crosshair"]
visible = false
margin_left = 15.1704
margin_top = -8.0534
margin_right = 79.1703
margin_bottom = 31.9466
max_value = 1.0
step = 0.01
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/loading = SubResource( 1 )

[node name="LoadingPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.624

[node name="FirePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_loading_finished"]
